docs/versions/8.0.0/rules/lib/fragments/py.mdx
<html devsite>
<head>
  <meta name="project_path" value="/_project.yaml">
  <meta name="book_path" value="/versions/8.0.0/_book.yaml">
</head>
<body>

<h1 class="page-title" id="modules.py">py</h1>

{% dynamic setvar source_file "src/main/java/com/google/devtools/build/lib/rules/python/PythonConfiguration.java" %}
{% dynamic setvar version "8.0.0" %}
{% dynamic setvar original_path "/rules/lib/fragments/py" %}
{% include "_buttons.html" %}
<!-- {% raw %} -->

A configuration fragment for Python.

<h2>Members</h2>
<ul>
    <li>
    <a href="#build_python_zip">build_python_zip</a>
  </li>
      <li>
    <a href="#default_python_version">default_python_version</a>
  </li>
      <li>
    <a href="#default_to_explicit_init_py">default_to_explicit_init_py</a>
  </li>
      <li>
    <a href="#disable_py2">disable_py2</a>
  </li>
      <li>
    <a href="#disallow_native_rules">disallow_native_rules</a>
  </li>
      <li>
    <a href="#include_label_in_linkstamp">include_label_in_linkstamp</a>
  </li>
      <li>
    <a href="#use_toolchains">use_toolchains</a>
  </li>
  </ul>

      <h2 id="build_python_zip">build_python_zip</h2>
        <p><pre class="rule-signature"><a class="anchor" href="../core/bool.html">bool</a> py.build_python_zip</pre></p>

    The effective value of --build_python_zip


        <h2 id="default_python_version">default_python_version</h2>
        <p><pre class="rule-signature"><a class="anchor" href="../core/string.html">string</a> py.default_python_version</pre></p>

    The default python version from --incompatible_py3_is_default


        <h2 id="default_to_explicit_init_py">default_to_explicit_init_py</h2>
        <p><pre class="rule-signature"><a class="anchor" href="../core/bool.html">bool</a> py.default_to_explicit_init_py</pre></p>

    The value from the --incompatible_default_to_explicit_init_py flag


        <h2 id="disable_py2">disable_py2</h2>
        <p><pre class="rule-signature"><a class="anchor" href="../core/bool.html">bool</a> py.disable_py2</pre></p>

    The value of the --incompatible_python_disable_py2 flag.


        <h2 id="disallow_native_rules">disallow_native_rules</h2>
        <p><pre class="rule-signature"><a class="anchor" href="../core/bool.html">bool</a> py.disallow_native_rules</pre></p>

    The value of the --incompatible_python_disallow_native_rules flag.


        <h2 id="include_label_in_linkstamp">include_label_in_linkstamp</h2>
        <p><pre class="rule-signature"><a class="anchor" href="../core/bool.html">bool</a> py.include_label_in_linkstamp</pre></p>

    Whether the build label is included in unstamped builds.


        <h2 id="use_toolchains">use_toolchains</h2>
        <p><pre class="rule-signature"><a class="anchor" href="../core/bool.html">bool</a> py.use_toolchains</pre></p>

    The value from the --incompatible_use_python_toolchains flag



</body>
</html>

<!-- {% endraw %} -->
